--- a/src/styles/components/_widget.scss
+++ b/src/styles/components/_widget.scss
@@ -1,4 +1,22 @@
 // Widget header
+.widget {
+  background: $light-blue;
+}
+
 .widget-header {
   background: $blue;
+  color: $off-white;
+  display: flex;
+  justify-content: space-between;  
+  padding: $m-size;
 }
+
+.widget-header__message {
+  color: $off-white;
+  margin: 0;
+  padding: $l-size;
+  text-align: center;
+  border-bottom: 1px solid lighten($light-blue, 10%);
+}
+
+
