--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,6 @@
 @import './components/container';
 @import './components/header';
 @import './components/widget';
+@import './components/option';
+@import './components/add-option';
 
