--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,9 +7,11 @@ $dark-blue: #333745;
 $purple: #8357c5;
 $light-blue: #464b5e;
 
+
 //Spacing
 
 $s-size:1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+$desktop-breakpoint: 45rem;
