Nav highlighted routes

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,7 +5,6 @@ html {
 body { 
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
-  background-color:$dark-blue;
 }
 
 button {
@@ -14,4 +13,8 @@ button {
 
 button:disabled {
   cursor: default;
+}
+
+.is-active {
+  font-weight: bold;
 }
