--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,8 +4,10 @@ $dark-grey: #333333;
 
 //Spacing
 
+$xs-size:0.8rem;
 $s-size:1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+$xxl-size: 7.2rem;
 $desktop-breakpoint: 45rem;
