Various styles applied, halfway done through styling individual list items

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,12 @@
 // Colors
 
 $dark-grey: #333333;
+$grey: #666;
 $dark-blue: #2C364A;
 $off-white: #f7f7f7;
 $white:#DDDDDD;
 $blue: #0a62c7;
+$off-yellow: #cacccd;
 
 //Spacing
 
