--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,8 @@
 @import './components/content-container';
 @import './components/page-header';
 @import './components/button';
+@import './components/input-group';
+@import './components/inputs';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
