--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -6,3 +6,63 @@
     justify-content: space-between;
     padding: $s-size $m-size;
 }
+
+.list-body {
+    margin-bottom: $m-size;
+}
+
+.list-item {
+    border: 1px solid darken($off-white, 7%);
+    border-top: none;
+    color: $dark-grey;
+    display: flex;
+    flex-direction: column;
+    padding: $s-size;
+    text-decoration: none;
+    transition: background .3s ease;
+
+    &:hover {
+        background: $off-white;
+    }
+
+    @media (min-width: $desktop-breakpoint){
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: $m-size;
+    }
+}
+
+.list-item--message {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    color:$dark-grey;
+    background-color: $off-white;
+    border: 1px solid darken($off-white, 7%);
+    border-top: none;
+    font-style:italic;
+    height: 20vh;
+    font-size: 4rem;
+
+
+}
+
+.list-item__title {
+    margin: 0;
+    word-break: break-all;
+}
+
+.list-item__sub-title {
+    color: $grey;
+    font-size:1.4rem;
+}
+
+.list-item__data {
+    margin: $s-size 0 0 0;
+
+    @media (min-width: $desktop-breakpoint){
+        margin: 0;
+        padding-left: $s-size;
+    }
+}
