Finalize remove all functionality

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -22,3 +22,10 @@
     background: $dark-grey;
     color: $off-white;
 }
+
+.button__red{
+    @extend .button;
+    background: rgb(211, 60, 0);
+    color: $off-white;
+    margin-left: 2rem;
+}
